@@ -692,19 +692,6 @@
             md5="0be9ddc9977cdf7e94a5455463af8a1e"
             download="server"
             />
-        <mod name="BiblioWoods[Highlands]"
-            description="Adds ability to make Bibliocraft blocks from the Highlands woods."
-            website="http://www.minecraftforum.net/topic/1680480-15xforgesmp-bibliocraft-v131-bookcases-armor-stands-shelves-printing-presses-with-fancy-lamps-tables-and-more-updated-06042013/"
-            type="mods"
-            version="1.1"
-            optional="no"
-            server="yes"
-            depends="BiblioCraft,Highlands"
-            url="packs/RedwoodServer/files/1.6.4/BiblioWoods[Highlands][v1.1].zip"
-            file="BiblioWoods[Highlands][v1.1].zip"
-            md5="4c4ac773b820e0683ccb348b3f97aba4"
-            download="server"
-            />
         <mod name="Discocraft"
             description="Adds 6 new records, a disco dance floor and functioning disco ball."
             website="http://www.minecraftforum.net/topic/1845067-"
